Implemented logic for budget manipulation.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <body>
         <div class="top">
             <div class="budget-container">
-                <div class="budget-container__label">Available Budget in November 2019:</div>
+                <div class="budget-container__label">
+                    Available Budget in <span class="budget-container__label-date"></span>:
+                </div>
                 <div class="budget-container__summary">+ 100.00 &euro;</div>
                 <div class="budget-container__status">
                     <div class="budget-container__income">
@@ -55,33 +57,33 @@
                 <div class="incomes">
                     <h2 class="incomes__title">INCOME</h2>
                     <ul class="income-list">
-                        <li class="income-list__item">
+                        <!-- <li class="income-list__item">
                             <div class="income-list__item-description">Sold watch</div>
                             <div class="income-list__item-value">+ 75.00</div>
                             <button class="btn-icon income-list__button">
                                 <i class="income-list__button-icon icon ion-ios-close-circle-outline"></i>
                             </button>
-                        </li>
-                        <li class="income-list__item">
+                        </li> -->
+                        <!-- <li class="income-list__item">
                             <div class="income-list__item-description">Sold picture</div>
                             <div class="income-list__item-value">+ 25.00</div>
                             <button class="btn-icon income-list__button">
                                 <i class="income-list__button-icon icon ion-ios-close-circle-outline"></i>
                             </button>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
                 <div class="expenses">
-                    <h2 class="incomes__expenses">EXPENSES</h2>
+                    <h2 class="expenses__title">EXPENSES</h2>
                     <ul class="expense-list">
-                        <li class="expense-list__item">
+                        <!-- <li class="expense-list__item">
                             <div class="expense-list__item-description">Bought groceries</div>
                             <div class="expense-list__item-value">- 50.00</div>
                             <div class="expense-list__item-percentage d-none">---</div>
                             <button class="btn-icon expense-list__button">
                                 <i class="expense-list__button-icon icon ion-ios-close-circle-outline"></i>
                             </button>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
             </div>
